LDEV-3962 Similar changes done to Open Lesson dialog as previously done to Open/Save sequence in authoring * ability to save sequences on pressing the Enter button when title input is focused * focus title input field in case this element is visible in the current viewport (to avoid unwanted scrolling) * ability to start lessons on double click * prevent sequences from being deselected on any subsequent clicks
* Make 'Tour' word to appear after icon in order to be consistent with the rest of the buttons
* Make #notificationsPendingCount to be less prominent in case there are no messages. And assign it 'btn-primary' class when there are some messages available

--- a/lams_central/web/css/main.css
+++ b/lams_central/web/css/main.css
@@ -307,6 +307,9 @@ ul.dropdown-usermenu li {
 	vertical-align: middle;
 	border-radius: 10px;
 }
+#notificationsPendingCount.btn-default {
+    background-color: #ddd;
+}
 
 /*DIALOGS*/
 .dialogContainer {
